2009-04-28 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation a bit
	
2009-04-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug #2781239.
	* Fixed bug #2781432.
	* Eliminating several GCC 4.3.3 warnings.

2009-04-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed more OpenGL bugs; BG and SI intro and endgames play in full now. The
	  Exult menu now works correctly, as do mods and setup menus. Added faster
	  routines to get bounding power of 2 size for OpenGL textures.
	* Fixed a few miscolored pixels in Exult menu logo.
	* Fixed subtitle bug in SI intro -- they would not display if audio was
	  disabled but voice was enabled.
	* Cleaned up BG & SI intro and endgame OpenGL code. Made consistent use of
	  #ifdef HAVE_OPENGL, instead of checking #if HAVE_OPENGL. OpenGL now only
	  clears shapes that have palette rotation when rotating the palette.

2009-04-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed several bugs in OpenGL: Cheat menu, shape browser, game menus now
	  work correctly; main (Exult) menu still wonky. BG intro, except for the
	  guardian cutscene, works correctly; SI intro, and BG and SI endgames do
	  not yet work.
	* Fixed mistaken if assignment that prevented changing scalers to anything
	  other than pixel, interlaced, OpenGL and Hq3x scalers.
	* Removed several GCC 4.3.x compilation warnings, including some paranoid
	  ones. Removed several unused variables, and optimized the memory layout
	  of a few classes.

2009-04-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Applied variation of patch #2272014.
	* Fixed bug #1598910 and #2764270. The latter was done by tying scalers and 
	  scales more tighly; except for point, interlaced and OpenGL scalers, each
	  scaler uses only its "native" scale, ignoring (and overwriting) the value
	  in exult.cfg.
	* Some lerping code is now executed only if lerping is enabled.
	* Fixed a few bugs in OpenGL code, eliminating several crashes. OpenGL now